feat: Limpeza de código, melhoria do css do mobile